Entrega del Proyecto SC

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,30 @@
+*/
+@import '~bootstrap/scss/bootstrap.scss';
+
+.Counter {
+        text-align: center;
+        background: black; 
+}
+
+.Counter div {
+        display: inline-block;
+        font-size: 60px;
+        line-height: 60px;
+        background: black;
+        color: white;
+        padding: 10px;
+        margin: 10px;
+        
+
+}
+
+.Clock {
+
+        margin-left: "10px";
+
+}
 
 /* 
-
     You can write your own styles here...
     
     
@@ -8,5 +32,4 @@
     other sylesheets into your bunde as well, e.j:
     
     import 'relative/path/to/stylesheet.scss';
-
 */
